# VirtualCity

./: .gitignore  .ue5_trigger  AI_HANDOFF.md  README.md  VirtualCity完整执行计划.md  执行方案.md
Config/: README.md  active_area.json  (+14 more)
Scripts/: README.md  _add_road_extrude.py  _apply_clip_and_rewire.py  _fix_clean_raw_data.py  _fix_dem_import.py  _fix_overture_defaults.py  _fix_recook.py  _fix_road_strips_attr.py  _fix_snap_vex2.py  _fix_snap_vex3.py  _osm_import_canonical.py  _patch_osm_import_v2.py  _recook_new_area.py  _road_strips_v2.py  _road_strips_v3_shapely.py  _road_strips_v5.py  _road_strips_v6.py  _road_strips_v7.py  _road_union.py  _run_cook_roads.py  _tile_cache.py  _utm_lite.py  _verify_roads.py  area_picker.py  cache_city_data.py  clean_raw_data.py  correct_dem_dtm.py  data_cleaning_cache.py  download_building_heights.py  download_dem.py  download_osm.py  download_overture_buildings.py  enrich_building_levels.py  export_and_import.py  export_heightmap.py  houdini_model_qa.py  houdini_road_pipeline.py  main.py  manifest.json  pipeline_state.py  (+16 more)
Scripts/Houdini自动化/: README.md
Scripts/UE5自动化/: README.md
Scripts/_archive/: README.md
Scripts/_archive/one_off_fixes/: _check_road_extrude.py  _fix_and_check.py  _fix_enrich.py  _fix_patch.py  _fix_recook_dtm.py  _make_permanent_clips.py  _osm_import_current.py  _patch_procedural_height.py
Scripts/houdini_sops/: __init__.py  asset_bounds_filter.py  bld_footprint_bevel.py  bld_foundation.py  bld_snap.vex  dem_clip.vex  dem_import.py  dem_terrain.py  procedural_height.vex
Scripts/数据处理自动化/: README.md
配置/: README.md  (+6 more)
(+441 files in other folders)
