[project]
name = "virtualcity"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "earthengine-api>=1.0.0",
    "rasterio>=1.3.8",
    "overturemaps>=1.0.0",
    "rpyc==4.1.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
